syntax = "proto3";

option go_package = "shark/pkg/proto";

package pb;

// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative .\sso.proto

service SigService {
  rpc SigIn (SigReq) returns (Response);
  rpc SigOut (CheckReq) returns (Response);
  rpc Check (CheckReq) returns (Response);
}

message SigReq{
     uint64  uin           = 1;
     bytes   password      = 2;
     bytes   device_id     = 3;
}

message CheckReq{
     uint64 uin     = 1;
     bytes token    = 2;
}

message Response{
     uint32  code          = 1;
     bytes   result        = 2;
     bytes   token         = 3;
}
message MemberSigInfo{
  uint64 uin             = 1;
  bytes  token           = 2;
  uint64 expired_time    = 3;
  bytes   device_id      = 4;
}